@@ -394,7 +394,6 @@ var modules = {
   "manual": "manual",
   "mock": "mock",
   "multipart": "multipart",
-  "querystring": "querystring",
   "redirect": "redirect",
   "urlMap": "urlmap",
   "utils": "utils"
