@@ -1,7 +1,7 @@
 var path = require("path");
+var qs = require("querystring");
 var strata = require("./index");
 var multipart = require("./multipart");
-var querystring = require("./querystring");
 var utils = require("./utils");
 var Accept = require("./header/accept");
 var AcceptCharset = require("./header/accept-charset");
@@ -380,32 +380,22 @@ Request.prototype.cookies = function (callback) {
     return;
   }
 
-  var parser = new querystring.Parser(/[;,] */g);
-  var cookies = {};
-  var self = this;
+  var cookies = qs.parse(this.env.httpCookie, /[;,] */);
 
-  parser.onParam = function (name, value) {
-    cookies[name] = value;
-  };
-
-  parser.onEnd = function () {
-    // From RFC 2109:
-    // If multiple cookies satisfy the criteria above, they are ordered in
-    // the Cookie header such that those with more specific Path attributes
-    // precede those with less specific. Ordering with respect to other
-    // attributes (e.g., Domain) is unspecified.
-    for (var cookieName in cookies) {
-      if (Array.isArray(cookies[cookieName])) {
-        cookies[cookieName] = cookies[cookieName][0] || "";
-      }
+  // From RFC 2109:
+  // If multiple cookies satisfy the criteria above, they are ordered in
+  // the Cookie header such that those with more specific Path attributes
+  // precede those with less specific. Ordering with respect to other
+  // attributes (e.g., Domain) is unspecified.
+  for (var cookieName in cookies) {
+    if (Array.isArray(cookies[cookieName])) {
+      cookies[cookieName] = cookies[cookieName][0] || "";
     }
+  }
 
-    self.env.strataCookies = cookies;
-    callback(null, cookies);
-  };
+  this.env.strataCookies = cookies;
 
-  parser.write(new Buffer(this.env.httpCookie));
-  parser.end();
+  callback(null, cookies);
 };
 
 /**
@@ -428,21 +418,10 @@ Request.prototype.query = function (callback) {
     return;
   }
 
-  var parser = new querystring.Parser();
-  var query = {};
-  var self = this;
+  var query = qs.parse(this.env.queryString);
+  this.strataQuery = query;
 
-  parser.onParam = function (name, value) {
-    query[name] = value;
-  };
-
-  parser.onEnd = function () {
-    self.env.strataQuery = query;
-    callback(null, query);
-  };
-
-  parser.write(new Buffer(this.env.queryString));
-  parser.end();
+  callback(null, query);
 };
 
 /**
@@ -481,19 +460,27 @@ Request.prototype.body = function (callback) {
   } else if (this.parseableData) {
     var contentType = this.contentType || "";
     var match = contentType.match(/^multipart\/.*boundary=(?:"([^"]+)"|([^;]+))/im);
-    var body = {};
-    var parser;
 
     if (match) {
       var boundary = match[1] || match[2];
+      var body = {};
 
       try {
-        parser = new multipart.Parser(boundary, this.uploadDir, this.uploadPrefix);
+        var parser = new multipart.Parser(boundary, this.uploadDir, this.uploadPrefix);
       } catch (e) {
         var message = "Cannot create multipart parser";
         callback(new strata.Error(message, e), body);
         return;
       }
+
+      parser.onParam = function (name, value) {
+        body[name] = value;
+      };
+
+      parser.onEnd = function () {
+        self.env.strataBody = body;
+        callback(null, body);
+      };
 
       // Throttle the input stream based on how quickly we can
       // write to disk.
@@ -525,25 +512,17 @@ Request.prototype.body = function (callback) {
         }
       });
     } else {
-      parser = new querystring.Parser();
+      var buffer = '';
 
-      input.on("data", function (buffer) {
-        parser.write(buffer);
+      input.on("data", function (chunk) {
+        buffer += chunk.toString('utf8');
       });
 
       input.on("end", function () {
-        parser.end();
+        callback(null, qs.parse(buffer));
       });
     }
 
-    parser.onParam = function (name, value) {
-      body[name] = value;
-    };
-
-    parser.onEnd = function () {
-      self.env.strataBody = body;
-      callback(null, body);
-    };
   } else {
     var body = "";
 
